--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html, body {
     width: 100%;
     margin: 0;
     font-family: 'Barlow', sans-serif;
-    background-color: #fff;
+    background-color: #F5F5F5;
     color: #2e2e2e;
 }
 
@@ -22,6 +22,7 @@ hr{
 
 p{
   font-size: 16pt;
+  color: #696969;
 }
 
 /*******************
@@ -49,7 +50,7 @@ ul.topnav li{
 ul.topnav li a{
   color: #2e2e2e;
   font-family: 'Barlow', sans-serif;
-  font-size: 20pt;
+  font-size: 21pt;
   display: block;
   text-align: center;
   padding: 14px 16px;
@@ -57,12 +58,6 @@ ul.topnav li a{
 }
 
 ul.topnav a.active{text-decoration: underline;}
-
-/*
-ul.topnav li:hover{
-  text-decoration: underline;
-}
-*/
 
 @media screen and (max-width: 600px){
   ul.topnav li.left,
@@ -84,10 +79,68 @@ ul.topnav li:hover{
 
 */
 
-.home-container{
-  padding: 1em;
+.background_image{
+  background: url('../jpgdir/flock.jpg') no-repeat center center fixed;
+
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+  height: 100%;
+  width: 100%;
+  z-index: -1;
 }
 
+#Welcome{
+  color: #333333;
+  font-family: sans-serif;
+  font-size: 64pt;
+  background-color: rgb(255,255,255,0.05);
+}
+
+/* LEARN MORE BUTTON */
+
+input[id="learnMoreBtn"]{
+  margin-left: auto;
+  margin-right: auto;
+
+  width: 200px;
+  height: 60px;
+
+  background-color: rgb(255,255,255,0.3);
+  border: 1px solid #191919;
+  color: #191919;
+  font-size: 18pt;
+  border-radius: 1%;
+
+}
+input[id="learnMoreBtn"]:hover{
+  background-color: rgba(10, 10, 15, 0.5);
+  color: white;
+}
+
+input[id="learnMoreBtn"]:focus{
+  outline: none;
+}
+
+
+table[id="header"]{
+
+  border: 0px solid red;
+  position: absolute;
+
+  left: 50%;
+  top: 30%;
+  transform: translate(-50%,-50%);
+
+  z-index: 1;
+
+  width: 50%;
+
+  text-align: center;
+
+}
 
 /********************************
 
@@ -101,7 +154,7 @@ li.dropdown{
 li.dropdown .dropDownBtn{
   background-color: inherit;
   padding: 14px 16px;
-  font-size: 20pt;
+  font-size: 21pt;
   color: #2e2e2e;
   font-family: inherit;
   text-align: center;
@@ -110,6 +163,8 @@ li.dropdown .dropDownBtn{
   border: 0;
   width: 160px;
   z-index: 1;
+
+  border: 0px dashed red;
 }
 
 ul.topnav li.dropdown a{
@@ -143,7 +198,7 @@ ul.topnav li.dropdown a{
 
 li.dropdown a:hover {
   background-color: #505050;
-  color: #FAEBD7;
+  color: #fff;
 }
 .show{
   display: block;
@@ -195,6 +250,10 @@ img:hover{
 @media screen and (max-width: 1024px) {
   img:hover {
     transform: none;
+  }
+
+  table{
+    display: none;
   }
 }
 
@@ -291,7 +350,7 @@ h2.two{
 */
 
 .embedded-project{
-  display: flex;
+  display: block;
   text-align: center;
   justify-content: center;
   padding: 1em;
@@ -301,6 +360,11 @@ h2.two{
 .RFP-Text{
   justify-content: center;
   text-align: left;
+
+
+  color: #696969;
+  font-size: 14pt;
+  font-family: sans-serif;
 
   padding-left: 10%;
   padding-right: 10%;
@@ -326,10 +390,8 @@ body {
   font-size: 1.125rem;
   line-height: 1.5;
   color: #787878;
-  background: #fff;
-  text-rendering: optimizeLegibility;
-  height: 90%;
 
+  text-rendering: optimizeLegibility;
   text-align: center;
 }
 
